--- a/pms-aif.html
+++ b/pms-aif.html
@@ -11,6 +11,7 @@
       <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="pages.css">
+    <link rel="shortcut icon" href="images/logo-round-t.ico" type="image/x-icon">
     <title>Money Maa</title>
 </head>
 <body>
@@ -21,12 +22,12 @@
                 <div class="col-xl-4 col-lg-5 col-md-5 col-12">
                     <div class="header-info">
                         <i class="fa-solid fa-clock"></i>
-                        <p><span>Working Hours</span>: Sunday-Monday, 09 a.m.- 5 p.m.</p>
+                        <p><span>Working Hours</span>: Sunday - Monday, 10 AM - 8 PM</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-3 col-md-3 col-12 text-center">
                     <div class="contact-info">                        
-                        <a href="tel:+000(123)556989"><span>Call</span>: +000(123)556989</a>
+                        <a href="tel:9890655909"><span>Call</span>: +91 9890655909</a>
                     </div>
                 </div>
 
@@ -48,7 +49,7 @@
                     <div class="header-inner-box">     
 
                         <div class="logo">
-                            <a class="navbar-brand fw-bold" href="index.html">Money Maa</a>                            
+                            <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-transparent.png" alt=""></a>                            
                         </div>
 
                         <div class="main-menu">
@@ -62,7 +63,7 @@
                                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                                     <ul class="navbar-nav m-auto">
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="index.html">Home</a>
+                                            <a class="nav-link" href="index.html">Home</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="about.html">About Us
@@ -70,7 +71,7 @@
                                         </li> 
                                         
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Services
+                                            <a class="nav-link active" href="#">Services
                                                 <span class="sub-nav-toggler"> </span>
                                             <button class="sub-nav-toggler"> <i class="fa-solid fa-angle-down"></i> </button></a>
                                             <ul class="sub-menu">
@@ -90,10 +91,13 @@
                                                     <a href="bonds.html">Bonds</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="pms-aif.html">PMS / AIF</a>
+                                                    <a href="pms-aif.html" class="active">PMS / AIF</a>
                                                 </li>                                                 
                                             </ul>
                                         </li>                                                            
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="calculators.html">Financial Calculators</a>
+                                        </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="contact.html">Contact Us</a>
                                         </li>
@@ -115,7 +119,7 @@
 
         <div class="mobile-header green-bg">
             <div class="container header-container mobile-menu-container">
-                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html">Money Maa</a></div>
+                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a></div>
                 <div class="mobile-menu">
                     <button class="hamburger">&#9776;</button>
                     <button class="cross">&#735;</button>
@@ -147,6 +151,7 @@
                         </ul>
                     </a>
                     </li>
+                    <li><a href="calculators.html">Financial Calculators</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div> 
@@ -223,16 +228,16 @@
                 <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="footer-widget">
                         <div class="logo">
-                            <a class="navbar-brand" href="index.html">Money Maa</a>
+                            <a class="navbar-brand" href="index.html"><img src="images/logo-transparent.png" alt=""></a>
                         </div>
-                        <p class="company-desc">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit minus id quod maxime placeat facere assumenda est omnis dolor repellendus.</p>
+                        <p class="company-desc">We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
                         <div class="support-info">
                             <div class="support-icon">
                                 <i class="fa-solid fa-phone-volume"></i>
                             </div>
                             <div class="support-content">
                                 <h6>Free Support</h6>
-                                <p>0524 6230 2528</p>
+                                <p>+91 99222 55681</p>
                             </div>
                         </div>
                     </div>
@@ -244,27 +249,27 @@
                                 <div class="services-list">
                                     <h5>Our Services</h5>
                                     <ul>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="service-details.html">Financial Planning</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="service-details.html">Retirement Planning</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="service-details.html">Taxation</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="service-details.html">Mutual Funds</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="service-details.html">Bonds</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="service-details.html">Child Future Saving</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="taxation.html">Taxation</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS / AIF</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="footer-contact-info">
                                     <h5>Contact Us</h5>
-                                    <p class="address">Pune, Maharashtra</p>
-                                    <p class="number">050 520 6320 25</p>
-                                    <p class="email">support@yourdomain.tld</p>
+                                    <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
+                                    <p class="number">+91 9890655909 / +91 9922255681</p>
+                                    <p class="email">futuremaipaisa@gmail.com</p>
                                 </div>
                             </div>
                         </div>
                      </div>   
                 </div>
-                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
+                <!-- <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
                             <h5>Social Accounts</h5>
@@ -275,18 +280,18 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-xl-12 text-center">
                     <div class="founder-year-wrap wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
-                        <span>since 1990</span>
+                        <span>since 2016</span>
                     </div>
                     <div class="footer-navbar">
                         <ul>
-                            <li><a href="index.html">Home</a></li> 
                             <li><a href="about.html">About Us</a></li> 
                             <li><a href="mutual-funds.html">Services</a></li> 
+                            <li><a href="calculators.html">Financial Calculators</a></li> 
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
